# ZCare-medical-agent

./: .dockerignore  .env  Dockerfile  README.md  VM_DEPLOYMENT_GUIDE.md  config.ini  main.py  pyproject.toml  requirements.txt
agent/: graph.py  nodes.py  prompts.py  state.py
api/: endpoints.py
core/: config_parser.py
frontend/: index.html  script.js  style.css
models/: schemas.py
services/: file_processor.py  groq_client.py
