[project]
name = "zcare-medical-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
